[C08] - Fixing image and spacings

--- a/src/scss/components/_C08-stacked-content-top-image.scss
+++ b/src/scss/components/_C08-stacked-content-top-image.scss
@@ -1,4 +1,6 @@
 .C08-stacked-content-top-image {
+  @include svgLine();
+
   figure {
     position: relative;
 
